Clean and lint before building

--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -1,2 +1,15 @@
 @charset "utf-8";
 @namespace epub "http://www.idpf.org/2007/ops";
+
+footer{
+	margin-top: 1em;
+	text-align: right;
+}
+
+[epub|type~="z3998:signature"]{
+	font-variant: small-caps;
+}
+
+[epub|type~="preface"]{
+	margin-top: 20vh;
+}
